--- a/infrastructure/ExpenseTracker_API-prod-oas30.yaml
+++ b/infrastructure/ExpenseTracker_API-prod-oas30.yaml
@@ -1,13 +1,70 @@
 openapi: "3.0.1"
 info:
   title: "ExpenseTracker API"
-  version: "2025-06-06T16:26:09Z"
+  version: "2025-06-09T16:49:37Z"
 servers:
 - url: "https://a47raonx05.execute-api.us-east-1.amazonaws.com/{basePath}"
   variables:
     basePath:
       default: "prod"
 paths:
+  /expenses/export:
+    get:
+      responses:
+        "200":
+          description: "200 response"
+          headers:
+            Access-Control-Allow-Origin:
+              schema:
+                type: "string"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Empty"
+      security:
+      - CognitoExpenseAuthorizer: []
+      x-amazon-apigateway-integration:
+        type: "aws_proxy"
+        httpMethod: "POST"
+        uri: "arn:aws:apigateway:us-east-1:lambda:path/2015-03-31/functions/arn:aws:lambda:us-east-1:307946653174:function:ExportExpenseFunction/invocations"
+        responses:
+          default:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+        passthroughBehavior: "when_no_match"
+        timeoutInMillis: 29000
+        contentHandling: "CONVERT_TO_TEXT"
+    options:
+      responses:
+        "200":
+          description: "200 response"
+          headers:
+            Access-Control-Allow-Origin:
+              schema:
+                type: "string"
+            Access-Control-Allow-Methods:
+              schema:
+                type: "string"
+            Access-Control-Allow-Headers:
+              schema:
+                type: "string"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Empty"
+      x-amazon-apigateway-integration:
+        type: "mock"
+        responses:
+          default:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Methods: "'GET,OPTIONS'"
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+        requestTemplates:
+          application/json: "{\"statusCode\": 200}"
+        passthroughBehavior: "when_no_match"
   /expenses:
     get:
       responses:
@@ -30,6 +87,7 @@ paths:
       security:
       - CognitoExpenseAuthorizer: []
       x-amazon-apigateway-integration:
+        type: "aws_proxy"
         httpMethod: "POST"
         uri: "arn:aws:apigateway:us-east-1:lambda:path/2015-03-31/functions/arn:aws:lambda:us-east-1:307946653174:function:GetExpenseFunction/invocations"
         responses:
@@ -38,7 +96,6 @@ paths:
         passthroughBehavior: "when_no_match"
         timeoutInMillis: 29000
         contentHandling: "CONVERT_TO_TEXT"
-        type: "aws_proxy"
     post:
       responses:
         "200":
@@ -60,6 +117,7 @@ paths:
       security:
       - CognitoExpenseAuthorizer: []
       x-amazon-apigateway-integration:
+        type: "aws_proxy"
         httpMethod: "POST"
         uri: "arn:aws:apigateway:us-east-1:lambda:path/2015-03-31/functions/arn:aws:lambda:us-east-1:307946653174:function:AddExpenseFunction/invocations"
         responses:
@@ -70,7 +128,6 @@ paths:
         passthroughBehavior: "when_no_match"
         timeoutInMillis: 29000
         contentHandling: "CONVERT_TO_TEXT"
-        type: "aws_proxy"
     options:
       responses:
         "200":
@@ -93,6 +150,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Empty"
       x-amazon-apigateway-integration:
+        type: "mock"
         responses:
           default:
             statusCode: "200"
@@ -106,7 +164,6 @@ paths:
         requestTemplates:
           application/json: "{\"statusCode\": 200}"
         passthroughBehavior: "when_no_match"
-        type: "mock"
 components:
   schemas:
     Empty:
@@ -119,10 +176,18 @@ components:
       in: "header"
       x-amazon-apigateway-authtype: "cognito_user_pools"
       x-amazon-apigateway-authorizer:
+        type: "cognito_user_pools"
         providerARNs:
         - "arn:aws:cognito-idp:us-east-1:307946653174:userpool/us-east-1_vaCGrHdNP"
-        type: "cognito_user_pools"
 x-amazon-apigateway-gateway-responses:
+  DEFAULT_5XX:
+    responseParameters:
+      gatewayresponse.header.Access-Control-Allow-Methods: "'GET,OPTIONS'"
+      gatewayresponse.header.Access-Control-Expose-Headers: "'Access-Control-Allow-Origin:\
+        \ *, Access-Control-Allow-Methods: GET, OPTIONS, Access-Control-Allow-Headers:\
+        \ *'"
+      gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
+      gatewayresponse.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
   DEFAULT_4XX:
     responseParameters:
       gatewayresponse.header.Access-Control-Allow-Methods: "'GET,OPTIONS,POST'"
@@ -131,12 +196,3 @@ x-amazon-apigateway-gateway-responses:
         \ *'"
       gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
       gatewayresponse.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
-  DEFAULT_5XX:
-    responseParameters:
-      gatewayresponse.header.Access-Control-Allow-Methods: "'GET,OPTIONS,POST'"
-      gatewayresponse.header.Access-Control-Expose-Headers: "'Access-Control-Allow-Origin:\
-        \ *, Access-Control-Allow-Methods: GET, OPTIONS, Access-Control-Allow-Headers:\
-        \ *'"
-      gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
-      gatewayresponse.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
-# Placeholder for API Gateway OpenAPI definition
